force-app/main/default/objects/Library_Book__c/Library_Book__c.object-meta.xml
<CustomObject>
    <description>DigiLibrary App</description>
    <label>Library Book</label>
    <nameField>
        <label>Library Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>