force-app/main/default/objects/Library_Book__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>DigiLibrary app</description>
    <inlineHelpText>Enter your book author</inlineHelpText>
    <label>Author</label>
    <length>80</length>
    <type>Text</type>
</CustomField>