force-app/main/default/objects/Library_Book__c/fields/Available_Copies__c.field-meta.xml
<CustomField>
    <fullName>Available_Copies__c</fullName>
    <description>DigiLibrary app</description>
    <inlineHelpText>Number of copies available for this book</inlineHelpText>
    <label>Available Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>