force-app/main/default/objects/Library_Book__c/fields/Tittle__c.field-meta.xml
<CustomField>
    <fullName>Tittle__c</fullName>
    <description>DigiLibrary APP</description>
    <inlineHelpText>Enter your book&apos;s tittle</inlineHelpText>
    <label>Tittle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>